Update image source for Add BitZero button

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
     
     <footer class="footer">
-        <button class="static-button add-token-btn" onclick="addToken()"><img src="images/metamask.png" width="15px"> Add BitZero to Wallet</button>
+        <button class="static-button add-token-btn" onclick="addToken()"><img src="https://raw.githubusercontent.com/BitZerodotBase/bitzerowalletmodal/refs/heads/main/images/metamask.png" width="15px"> Add BitZero to Wallet</button>
         <p>Powered by BitZero</p>
     </footer>
   </div>
